  from __future__ import division, with_statement

- Bug #1557232: fix seg fault with def f((((x)))) and def f(((x),)).

- Fix %zd string formatting on Mac OS X so it prints negative numbers.

- Allow exception instances to be directly sliced again.

- fixed a bug with bsddb.DB.stat: the flags and txn keyword arguments
  were transposed.


Extension Modules
-----------------

- Patch #1646728: datetime.fromtimestamp fails with negative
  fractional times.  With unittest.

- Patch #1494140: Add documentation for the new struct.Struct object.

- Patch #1657276: Make NETLINK_DNRTMSG conditional.

- Bug #1653736: Fix signature of time_isoformat.

- operator.count() now raises an OverflowError when the count reaches sys.maxint.

- Bug #1575169: operator.isSequenceType() now returns False for subclasses of dict.

- collections.defaultdict() now verifies that the factory function is callable.

- Bug #1486663: don't reject keyword arguments for subclasses of builtin
  types.

- The version number of the ctypes package was changed to "1.0.2".

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Patch #1544279: Improve thread-safety of the socket module by moving
  the sock_addr_t storage out of the socket object.

- Patch #1615868: make bz2.BZFile.seek() work for offsets >2GiB.

- Bug #1563807: _ctypes built on AIX fails with ld ffi error.

- Bug #1598620: A ctypes Structure cannot contain itself.
 
- Bug #1588217: don't parse "= " as a soft line break in binascii's
  a2b_qp() function, instead leave it in the string as quopri.decode()
  does.

- Patch #838546: Make terminal become controlling in pty.fork()

- Patch #1560695: Add .note.GNU-stack to ctypes' sysv.S so that
  ctypes isn't considered as requiring executable stacks.

- Bug #1567666: Emulate GetFileAttributesExA for Win95.

- Bug #1548891: The cStringIO.StringIO() constructor now encodes unicode
  arguments with the system default encoding just like the write()